--- a/poms/pom.xml
+++ b/poms/pom.xml
@@ -2,17 +2,59 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.yawlfoundation</groupId>
-    <artifactId>runtime</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>parent</artifactId>
+    <version>4.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>YAWL Runtime</name>
+    <name>YAWL</name>
+
+    <properties>
+        <hibernate.dialect>org.hibernate.dialect.PostgreSQLDialect</hibernate.dialect>
+        <hibernate.connection.driver_class>org.postgresql.Driver</hibernate.connection.driver_class>
+        <hibernate.connection.url>jdbc:postgresql:yawl</hibernate.connection.url>
+        <hibernate.connection.username>postgres</hibernate.connection.username>
+        <hibernate.connection.password>yawl</hibernate.connection.password>
+    </properties>
 
     <modules>
         <!--
         <module>controlpanel</module>
         <module>editor</module>
+        <module>runtime</module>
         -->
+        <module>yawl-lib</module>
         <module>engine</module>
+        <module>resourceService</module>
     </modules>
+    
+    <profiles>        
+        <profile>
+            <id>H2</id>            
+            <properties>
+                <hibernate.dialect>org.hibernate.dialect.H2Dialect</hibernate.dialect>
+                <hibernate.connection.driver_class>org.h2.Driver</hibernate.connection.driver_class>
+                <hibernate.connection.url>jdbc:h2:${catalina.base}/database/yawldb;MVCC=TRUE;AUTO_SERVER=TRUE</hibernate.connection.url>
+            </properties>
+        </profile>
+        <profile>
+            <id>Derby Embedded</id>            
+            <properties>
+                <hibernate.dialect>org.hibernate.dialect.DerbyDialect</hibernate.dialect>
+                <hibernate.connection.driver_class>org.apache.derby.jdbc.EmbeddedDriver</hibernate.connection.driver_class>
+                <hibernate.connection.url>jdbc:derby:yawl;create=true</hibernate.connection.url>
+                <hibernate.connection.username></hibernate.connection.username>
+                <hibernate.connection.password></hibernate.connection.password>
+            </properties>
+        </profile>
+        <profile>
+            <id>Derby Client</id>            
+            <properties>
+                <hibernate.dialect>org.hibernate.dialect.DerbyDialect</hibernate.dialect>
+                <hibernate.connection.driver_class>org.apache.derby.jdbc.ClientDriver</hibernate.connection.driver_class>
+                <hibernate.connection.url>jdbc:derby:///yawl</hibernate.connection.url>
+                <hibernate.connection.username></hibernate.connection.username>
+                <hibernate.connection.password></hibernate.connection.password>
+            </properties>
+        </profile>
+    </profiles>
 </project>
