--- a/services/resourceService/pom.xml
+++ b/services/resourceService/pom.xml
@@ -3,16 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.yawlfoundation</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>services</artifactId>
         <version>4.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.yawlfoundation</groupId>
     <artifactId>resourceService</artifactId>
-    <version>4.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>YAWL Resource Service</name>
+    <name>YAWL - Resource Service</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
