--- a/services/runtime/pom.xml
+++ b/services/runtime/pom.xml
@@ -3,16 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.yawlfoundation</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>services</artifactId>
         <version>4.1-SNAPSHOT</version>
     </parent>
-
-    <groupId>org.yawlfoundation</groupId>
     <artifactId>runtime</artifactId>
-    <version>4.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>YAWL Runtime</name>
+    <name>YAWL - Services Runtime</name>
 
     <build>
         <plugins>
