--- a/services/balancer/pom.xml
+++ b/services/balancer/pom.xml
@@ -6,10 +6,10 @@
         <artifactId>services</artifactId>
         <version>4.1-SNAPSHOT</version>
     </parent>
-    <artifactId>schedulingService</artifactId>
+    <artifactId>balancer</artifactId>
     <packaging>war</packaging>
 
-    <name>YAWL - SchedulingService</name>
+    <name>YAWL - Balancer</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -17,23 +17,14 @@
     </properties>
     
     <build>
-        <resources>
-            <resource>
-                <directory>../../build/schedulingService</directory>
-                <excludes>
-                    <exclude>web.xml</exclude>
-                </excludes>
-            </resource>
-        </resources>
-        
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
-                    <warName>schedulingService</warName>
-                    <webXml>${project.basedir}/../../build/schedulingService/web.xml</webXml>
+                    <warName>balancer</warName>
+                    <webXml>${project.basedir}/../../build/balancer/web.xml</webXml>
                 </configuration>
             </plugin>
             <plugin>
@@ -68,7 +59,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>yawl-lib</artifactId>
-        </dependency>
+        </dependency>        
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
