--- a/services/documentStore/pom.xml
+++ b/services/documentStore/pom.xml
@@ -9,9 +9,10 @@
     <artifactId>documentStore</artifactId>
     <packaging>war</packaging>
 
-    <name>YAWL - DocumentStore</name>
+    <name>YAWL - Document Store</name>
 
     <build>
+        <sourceDirectory>../../src</sourceDirectory>
         <resources>
             <resource>
                 <directory>../../build/documentStore</directory>
@@ -22,6 +23,41 @@
         </resources>
         
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <excludes>
+                        <exclude>org/yawlfoundation/yawl/authentication/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/balancer/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/controlpanel/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/cost/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/digitalSignature/**</exclude>
+                        <!--exclude>org/yawlfoundation/yawl/documentStore/**</exclude-->
+                        <exclude>org/yawlfoundation/yawl/elements/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/engine/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/exceptions/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/logging/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/mailSender/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/mailService/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/monitor/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/procletService/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/reporter/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/resourcing/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/scheduling/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/schema/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/simulation/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/smsModule/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/swingWorklist/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/twitterService/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/unmarshal/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/util/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/worklet/**</exclude>
+                        <exclude>org/yawlfoundation/yawl/wsif/**</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
