--- a/yawl/yawl-lib/pom.xml
+++ b/yawl/yawl-lib/pom.xml
@@ -6,10 +6,7 @@
         <artifactId>parent</artifactId>
         <version>4.1-SNAPSHOT</version>
     </parent>
-
-    <groupId>org.yawlfoundation</groupId>
     <artifactId>yawl-lib</artifactId>
-    <version>4.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>YAWL - Engine Library</name>
@@ -25,6 +22,10 @@
                     <exclude>**/*.jsp</exclude>
                 </excludes>
             </resource>
+            <resource>
+                <directory>../../schema</directory>
+                <targetPath>org/yawlfoundation/yawl/unmarshal</targetPath>
+            </resource>            
             <resource>
                 <directory>../../src/org/yawlfoundation/yawl/engine</directory>
                 <includes>
@@ -43,6 +44,7 @@
                     <include>log4j2.xml</include>
                 </includes>
             </resource>
+            <!--
             <resource>
                 <directory>${project.basedir}/../resources</directory>
                 <filtering>true</filtering>
@@ -50,7 +52,7 @@
                     <include>hibernate.properties</include>
                 </includes>
             </resource>
-            
+            -->
         </resources>
         
         <plugins>
@@ -59,8 +61,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
                     <excludes>
                         <!--exclude>org/yawlfoundation/yawl/authentication/**</exclude-->
                         <exclude>org/yawlfoundation/yawl/balancer/**</exclude>
